# currency

./: .env  pyproject.toml
api/: currency.py
currency_project/: asgi.py  env_config.py  settings.py  urls.py  wsgi.py
mainapp/: urls.py  views.py
mainapp/templates/: base.html
mainapp/templates/mainapp/: current_usd.html
